[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/characters/player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/art/ships/player_ship.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 210, 350 )

[sub_resource type="Animation" id=2]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 5 ]
}

[sub_resource type="Animation" id=3]
resource_name = "fly_left_slight"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 6 ]
}

[sub_resource type="Animation" id=4]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 9 ]
}

[sub_resource type="Animation" id=5]
resource_name = "fly_right_slight"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 8 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 7 ]
}

[node name="Player" groups=[
"player",
] instance=ExtResource( 1 )]
position = Vector2( 0, 7.8867 )
script = ExtResource( 2 )
acceleration = 2000
max_speed = 600
faction = 0
keep_in_rect = SubResource( 1 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="Collider" parent="." index="3"]
visible = true

[node name="PlayerAnimations" type="AnimationPlayer" parent="." index="5"]
anims/fly_left = SubResource( 2 )
anims/fly_left_slight = SubResource( 3 )
anims/fly_right = SubResource( 4 )
anims/fly_right_slight = SubResource( 5 )
anims/fly_straight = SubResource( 6 )

[node name="InvincibilityTimer" type="Timer" parent="." index="6"]
one_shot = true

[node name="RespawnTimer" type="Timer" parent="." index="7"]
one_shot = true

[node name="ShootTimer" type="Timer" parent="." index="8"]
one_shot = true
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
